<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_draw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="end"

                >

                <Button
                    android:id="@+id/btn_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_refresh"
                    app:backgroundTint="@color/material_on_primary_emphasis_high_type" />

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/cityName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/dateOfTheDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                             />

                        <TextView
                            android:id="@+id/weatherState"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:layout_marginTop="20dp"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">


                        <ImageView
                            android:id="@+id/currentWeatherImage"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/weatherIconDescription" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currentTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="@color/cardview_shadow_start_color"
                        android:shadowDx="-2"
                        android:shadowDy="-2"
                        android:shadowRadius="1"
                        android:textSize="100sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/currentMinTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:layout_weight="1"
                            android:layout_marginRight="25dp" />

                        <TextView
                            android:id="@+id/currentMaxTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/futureReportsRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/wind_speed"
                            android:textSize="18sp" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/wind_direction"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            android:id="@+id/tv_windSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:textSize="25sp" />

                        <TextView

                            android:id="@+id/tv_windDirection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:text="@string/humidity"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_weight="1"/>

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/air_pressure"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_humidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/tv_airPressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/visibility"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:text="@string/predictability"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_visibility"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/tv_predictability"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:gravity="center"
                            android:textSize="25sp" />

                    </LinearLayout>

                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>